@startuml
class ResultModel {
    + ResultModel()
    + ResultModel(errorMessage:string)
    + IsSuccess : bool <<get>>
    + ErrorMessage : string <<get>> <<set>>
}
class "ResultModel`1"<T> {
    + ResultModel()
    + ResultModel(content:T)
    + ResultModel(errorMessage:string)
    + Content : T <<get>> <<set>>
}
class "ResultListModel`1"<T> {
    + TotalCount : int <<get>> <<set>>
    + PageCount : int <<get>> <<set>>
}
class "IEnumerable`1"<T> {
}
ResultModel <|-- "ResultModel`1"
"ResultModel`1" "<T>" <|-- "ResultListModel`1"
"ResultListModel`1" --> "Data<T>" "IEnumerable`1"
@enduml
